--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
             </div>
         </nav>
         
-        dbgozidgouh
+        <div class="jumbotron jumbotron-fluid" id="hero">
+            <h1>Twinkle, twinkle! 16 Awesome Public Lands for Stargazing</h1>
+            <a class="btn btn-primary btn-lg" href="#" role="button">
+                Learn more
+            </a>
+        </div>
 
 
 
