Added CTA section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <div class="card" style="width: 100%;">
                                     <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
                                     <div class="card-body">
@@ -124,7 +124,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <div class="card" style="width: 100%;">
                                     <img class="card-img-top" src="/assets/card2.jpg" alt="Card 2">
                                     <div class="card-body">
@@ -132,7 +132,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <div class="card" style="width: 100%;">
                                     <img class="card-img-top" src="/assets/card3.jpg" alt="Card 3">
                                     <div class="card-body">
@@ -144,7 +144,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <div class="card" style="width: 100%;">
                                     <img class="card-img-top" src="/assets/card4.jpg" alt="Card 4">
                                     <div class="card-body">
@@ -152,7 +152,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                         <div class="card" style="width: 100%;">
                                             <img class="card-img-top" src="/assets/card5.jpg" alt="Card 5">
                                             <div class="card-body">
@@ -160,7 +160,7 @@
                                             </div>
                                         </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                         <div class="card" style="width: 100%;">
                                             <img class="card-img-top" src="/assets/card6.jpg" alt="Card 6">
                                             <div class="card-body">
@@ -183,12 +183,28 @@
             <h5><a href="#">More news...</a></h5>
         </section>
 
-        <section class="container">
-            
+        <section class="container-fluid" id="subscribe">
+            <div class="row">
+                <div class="col-lg-7">
+                    <h4 style="text-align: center;">Subscribe and stay up to date on all DOI news!</h4>
+                </div>
+                <div class="col-lg-5">
+                    <div class="form-row">
+                        <div class="col-10">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="Enter Your Email">
+                        </div>
+                        <div class="col-2">
+                            <button class="btn btn-success" type="submit">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
+
+        
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/ulg/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     </body>
 </html>
