started central sections

--- a/index.html
+++ b/index.html
@@ -201,8 +201,51 @@
             </div>
         </section>
 
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h2>Interior Blog</h2>
+                            <div class="card">
+                                <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
+                                <div class="card-body">
+                                    <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                </div>
+                            </div>
+                            <h2>Interior Blog</h2>
+                            <div class="card">
+                                <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
+                                <div class="card-body">
+                                    <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <h2>Interior Blog</h2>
+                            <div class="card">
+                                <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
+                                <div class="card-body">
+                                    <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                </div>
+                            </div>
+                            <h2>Interior Blog</h2>
+                            <div class="card">
+                                <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
+                                <div class="card-body">
+                                    <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <a class="twitter-timeline" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">National Park Tweets - Curated tweets by TwitterDev</a>
+                </div>
+            </div>
+        </section>
 
-        
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/ulg/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
