--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark navbar-sticky-top" id="navigation">
             <a class="navbar-brand" href="#">
-                <img src="/assets/logo.png" width="15%" class="d-inline-block align-middle" alt="D.O.I Logo">
+                <img src="assets/logo.png" width="15%" class="d-inline-block align-middle" alt="D.O.I Logo">
                     <span class="align-middle" style="font-size: 1.5em; margin:0;">U.S. Department of the Interior</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -201,47 +201,109 @@
             </div>
         </section>
 
-        <section class="container-fluid">
+        <section class="container-fluid" id="middle">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-6">
                             <h2>Interior Blog</h2>
                             <div class="card">
-                                <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
+                                <img class="card-img-top" src="../assets/interior.jpg" alt="Card 1">
                                 <div class="card-body">
-                                    <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                </div>
-                            </div>
-                            <h2>Interior Blog</h2>
-                            <div class="card">
-                                <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
-                                <div class="card-body">
-                                    <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                    <a href="#"><h5 class="card-title">Wild recipes from public lands across...<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <h2>Interior Blog</h2>
+                        <div class="col-lg-6">    
+                            <h2>Travels with Zinke</h2>
                             <div class="card">
-                                <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
+                                <img class="card-img-top" src="../assets/zinke.jpg" alt="Card 1">
                                 <div class="card-body">
-                                    <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                </div>
-                            </div>
-                            <h2>Interior Blog</h2>
-                            <div class="card">
-                                <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
-                                <div class="card-body">
-                                    <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                    <a href="#"><h5 class="card-title">Zinke in Florida<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="row" id="connect">
+                        <div class="col-12">
+                            <h2 style="padding-bottom: 3%;">Connect with the Interior</h2>
+                        </div>
+                        <div class="col-lg-4">
+                            <span class="oi oi-people connectIcon"></span>
+                            <h4>Volunteer</h4>
+                        </div>
+                        <div class="col-lg-4">
+                            <span class="oi oi-book connectIcon"></span>
+                            <h4>Students</h4>
+                        </div>
+                        <div class="col-lg-4">
+                            <span class="oi oi-bar-chart connectIcon"></span>
+                            <h4>Businesses</h4>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4">
-                    <a class="twitter-timeline" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">National Park Tweets - Curated tweets by TwitterDev</a>
+                    <a class="twitter-timeline" data-height="800" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">Tweets from the Interior</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
+            </div>
+        </section>
+
+        <section class="container-fluid" id="footer">
+            <div class="row">
+                <div class="col-12 footSpace"></div>
+                <div class="col-lg-2 divideRight">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><h5>About</h5></li>
+                        <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                        <li class="list-group-item"><a href="#">Morbi leo risus</a></li>
+                        <li class="list-group-item"><a href="#">Porta ac consectetur ac</a></li>
+                        <li class="list-group-item"><a href="#">Vestibulum at eros</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 divideRight">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><h5>Departments</h5></li>
+                        <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                        <li class="list-group-item"><a href="#">Morbi leo risus</a></li>
+                        <li class="list-group-item"><a href="#">Porta ac consectetur ac</a></li>
+                        <li class="list-group-item"><a href="#">Vestibulum at eros</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 divideRight">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><h5>Priorities</h5></li>
+                        <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                        <li class="list-group-item"><a href="#">Morbi leo risus</a></li>
+                        <li class="list-group-item"><a href="#">Porta ac consectetur ac</a></li>
+                        <li class="list-group-item"><a href="#">Vestibulum at eros</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 divideRight">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><h5>News</h5></li>
+                        <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                        <li class="list-group-item"><a href="#">Morbi leo risus</a></li>
+                        <li class="list-group-item"><a href="#">Porta ac consectetur ac</a></li>
+                        <li class="list-group-item"><a href="#">Vestibulum at eros</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 divideRight">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><h5>Join Us</h5></li>
+                        <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                        <li class="list-group-item"><a href="#">Morbi leo risus</a></li>
+                        <li class="list-group-item"><a href="#">Porta ac consectetur ac</a></li>
+                        <li class="list-group-item"><a href="#">Vestibulum at eros</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><h5>Contact Us</h5></li>
+                        <li class="list-group-item"><a href="#"> feedback@jos.doi.gov</a></li>
+                        <li class="list-group-item"><a href="#">1849 C Street, N.W.<br>Washington DC 20240</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 footSpace"></div>
             </div>
         </section>
 
