Fixed page bugs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Homework 19: 4 Page Site</title>
         <link href="normalize.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:900|Open+Sans:300,400,600i" rel="stylesheet">
-        <link href="/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>     
@@ -14,7 +14,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark navbar-sticky-top" id="navigation">
             <a class="navbar-brand" href="#">
-                <img src="assets/logo.png" width="15%" class="d-inline-block align-middle" alt="D.O.I Logo">
+                <img src="images/logo.png" width="10%" class="d-inline-block align-middle" alt="D.O.I Logo">
                     <span class="align-middle" style="font-size: 1.5em; margin:0;">U.S. Department of the Interior</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -102,7 +102,7 @@
                     <div class="col" id="heroCaption">
                         <h2>
                             <a class="plainLink white" href="#">
-                                Twinkle, twinkle! 16 Awesome Public Lands for Stargazing<span class="oi oi-chevron-right followIcon align-middle" title="chevron-right" aria-hidden="true"></span>
+                                Twinkle, twinkle! 16 Awesome Public Lands for Stargazing<span class="fa fa-chevron-right followIcon align-middle" title="chevron-right" aria-hidden="true"></span>
                             </a>
                         </h2>
                     </div>
@@ -118,25 +118,25 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="card" style="width: 100%;">
-                                    <img class="card-img-top" src="/assets/card1.jpg" alt="Card 1">
+                                    <img class="card-img-top" src="images/card1.jpg" alt="Card 1">
                                     <div class="card-body">
-                                        <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                        <a href="#"><h5 class="card-title">Increased Recreational Opportunities<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="card" style="width: 100%;">
-                                    <img class="card-img-top" src="/assets/card2.jpg" alt="Card 2">
+                                    <img class="card-img-top" src="images/card2.jpg" alt="Card 2">
                                     <div class="card-body">
-                                            <a href="#"><h5 class="card-title">10 Alternatives to Popular National Parks<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                        <a href="#"><h5 class="card-title">10 Alternatives to Popular National...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="card" style="width: 100%;">
-                                    <img class="card-img-top" src="/assets/card3.jpg" alt="Card 3">
+                                    <img class="card-img-top" src="images/card3.jpg" alt="Card 3">
                                     <div class="card-body">
-                                            <a href="#"><h5 class="card-title">Michigan’s Bird of Fire Rises from the...<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                        <a href="#"><h5 class="card-title">Michigan’s Bird of Fire Rises from...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
                                     </div>
                                 </div>
                             </div>
@@ -146,27 +146,27 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="card" style="width: 100%;">
-                                    <img class="card-img-top" src="/assets/card4.jpg" alt="Card 4">
+                                    <img class="card-img-top" src="images/card4.jpg" alt="Card 4">
                                     <div class="card-body">
-                                        <a href="#"><h5 class="card-title">Interior Women Make More History<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                        <a href="#"><h5 class="card-title">Interior Women Make More History<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4">
-                                        <div class="card" style="width: 100%;">
-                                            <img class="card-img-top" src="/assets/card5.jpg" alt="Card 5">
-                                            <div class="card-body">
-                                                    <a href="#"><h5 class="card-title">Eureka! Rare Wildflower Pulled From...<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                            </div>
-                                        </div>
+                                <div class="card" style="width: 100%;">
+                                    <img class="card-img-top" src="images/card5.jpg" alt="Card 5">
+                                    <div class="card-body">
+                                        <a href="#"><h5 class="card-title">Eureka! Rare Wildflower Pulled...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-lg-4">
-                                        <div class="card" style="width: 100%;">
-                                            <img class="card-img-top" src="/assets/card6.jpg" alt="Card 6">
-                                            <div class="card-body">
-                                                    <a href="#"><h5 class="card-title">Secretary Zinke Announces More Than...<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
-                                            </div>
-                                        </div>
+                                <div class="card" style="width: 100%;">
+                                    <img class="card-img-top" src="images/card6.jpg" alt="Card 6">
+                                    <div class="card-body">
+                                        <a href="#"><h5 class="card-title">Secretary Zinke Announces More...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -208,18 +208,18 @@
                         <div class="col-lg-6">
                             <h2>Interior Blog</h2>
                             <div class="card">
-                                <img class="card-img-top" src="../assets/interior.jpg" alt="Card 1">
+                                <img class="card-img-top" src="images/interior.jpg" alt="Card 1">
                                 <div class="card-body">
-                                    <a href="#"><h5 class="card-title">Wild recipes from public lands across...<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                    <a href="#"><h5 class="card-title">Wild recipes from public lands across...<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">    
                             <h2>Travels with Zinke</h2>
                             <div class="card">
-                                <img class="card-img-top" src="../assets/zinke.jpg" alt="Card 1">
+                                <img class="card-img-top" src="images/zinke.jpg" alt="Card 1">
                                 <div class="card-body">
-                                    <a href="#"><h5 class="card-title">Zinke in Florida<span class="oi oi-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
+                                    <a href="#"><h5 class="card-title">Zinke in Florida<span class="fa fa-chevron-right followIcon" title="chevron-right" aria-hidden="true"></span></h5></a>
                                 </div>
                             </div>
                         </div>
@@ -229,21 +229,21 @@
                             <h2 style="padding-bottom: 3%;">Connect with the Interior</h2>
                         </div>
                         <div class="col-lg-4">
-                            <span class="oi oi-people connectIcon"></span>
+                            <span class="fa fa-users connectIcon"></span>
                             <h4>Volunteer</h4>
                         </div>
                         <div class="col-lg-4">
-                            <span class="oi oi-book connectIcon"></span>
+                            <span class="fa fa-graduation-cap connectIcon"></span>
                             <h4>Students</h4>
                         </div>
                         <div class="col-lg-4">
-                            <span class="oi oi-bar-chart connectIcon"></span>
+                            <span class="fa fa-building connectIcon"></span>
                             <h4>Businesses</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <a class="twitter-timeline" data-height="800" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">Tweets from the Interior</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <a class="twitter-timeline" data-height="100%" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">Tweets from the Interior</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
         </section>
